--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,37 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>Neerajgupta</title>
+  <title>Neeraj Gupta</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <link id="favicon" rel="icon" type="image/x-icon" href="favicon.ico"> -->
+  <!-- <link rel="icon" type="image/x-icon" href="assets/images/favhand.png"> -->
+  <!-- <link rel="icon" type="image/x-icon" href="assets/active-favicon.ico"> -->
+  <link id="favicon" rel="icon" type="image/x-icon" href="assets/images/favicon.png">
+  <link rel="stylesheet" href="https://unpkg.com/primeflex@latest/primeflex.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- <script>
+    
+  
+
+    document.addEventListener('visibilitychange',
+      function () {
+        if (document.visibilityState === "visible") {
+          document.title = "Experience |Neeraj GUpta";
+          $("#favicon").attr("href", "/assets/images/favicon.png");
+        }
+        else {
+          document.title = "Come Back To our Website";
+          $("#favicon").attr("href", "/assets/images/favhand.png");
+        }
+      });
+  </script> -->
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
