--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <link id="favicon" rel="icon" type="image/x-icon" href="assets/images/favicon.png">
   <link rel="stylesheet" href="https://unpkg.com/primeflex@latest/primeflex.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/src/mixin.css">
   <!-- <script>
     
   
