--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>NeerajGupta</title>
@@ -7,7 +8,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
+
   <app-root></app-root>
+
+  <div class="talktwin">
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+     var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+     (function () {
+       var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+       s1.async = true;
+       s1.src = 'https://embed.tawk.to/6778df2f49e2fd8dfe024904/1igo2fkm2';
+       s1.charset = 'UTF-8';
+       s1.setAttribute('crossorigin', '*');
+       s0.parentNode.insertBefore(s1, s0);
+     })();
+   </script>
+   <!--End of Tawk.to Script-->
+  </div>
+ 
 </body>
+
 </html>
